--- a/.gitignore
+++ b/.gitignore
@@ -124,9 +124,11 @@ celerybeat.pid
 .venv
 env/
 venv/
+meuvenv/
 ENV/
 env.bak/
 venv.bak/
+meuvenv.bak/
 
 # Spyder project settings
 .spyderproject
